[gd_scene load_steps=17 format=3 uid="uid://bhh21mxu6765g"]

[ext_resource type="Theme" uid="uid://brmolr535bgtw" path="res://src/main.theme" id="1_8ki8x"]
[ext_resource type="Script" path="res://src/classes/relative_split_container.gd" id="1_k1b4t"]
[ext_resource type="Script" path="res://src/ui/settings_window/settings_window.gd" id="1_qsncc"]

[sub_resource type="InputEventKey" id="InputEventKey_4l4ss"]
device = -1
pressed = true
keycode = 4194320

[sub_resource type="InputEventKey" id="InputEventKey_var2v"]
device = -1
pressed = true
keycode = 4194320

[sub_resource type="InputEventKey" id="InputEventKey_yd07q"]
device = -1
pressed = true
keycode = 4194322

[sub_resource type="InputEventKey" id="InputEventKey_rrtgh"]
device = -1
pressed = true
keycode = 4194322

[sub_resource type="InputEventKey" id="InputEventKey_xaci1"]
device = -1
pressed = true
keycode = 4194319

[sub_resource type="InputEventKey" id="InputEventKey_lv2as"]
device = -1
pressed = true
keycode = 4194321

[sub_resource type="InputEventKey" id="InputEventKey_h2c1i"]
device = -1
pressed = true
keycode = 4194319

[sub_resource type="InputEventKey" id="InputEventKey_lolqo"]
device = -1
pressed = true
keycode = 4194321

[sub_resource type="InputEventKey" id="InputEventKey_7dvbk"]
device = -1
pressed = true
keycode = 66
unicode = 98

[sub_resource type="InputEventKey" id="InputEventKey_t8w3d"]
device = -1
pressed = true
keycode = 65
unicode = 97

[sub_resource type="InputEventKey" id="InputEventKey_1h8ub"]
device = -1
pressed = true
keycode = 4194309

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ro8k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4oaw7"]

[node name="SettingsWindow" type="Window"]
title = "Settings"
position = Vector2i(226, 74)
size = Vector2i(700, 500)
wrap_controls = true
transient = true
exclusive = true
theme = ExtResource("1_8ki8x")
script = ExtResource("1_qsncc")
secret_code = Array[InputEvent]([SubResource("InputEventKey_4l4ss"), SubResource("InputEventKey_var2v"), SubResource("InputEventKey_yd07q"), SubResource("InputEventKey_rrtgh"), SubResource("InputEventKey_xaci1"), SubResource("InputEventKey_lv2as"), SubResource("InputEventKey_h2c1i"), SubResource("InputEventKey_lolqo"), SubResource("InputEventKey_7dvbk"), SubResource("InputEventKey_t8w3d"), SubResource("InputEventKey_1h8ub")])
secret_offsets = PackedVector2Array(0, -1, 0, -1, 0, 1, 0, 1, -1, 0, 1, 0, -1, 0, 1, 0, 0, -1, 0, 1, 0, 0)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SplitContainer" type="SplitContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 13
script = ExtResource("1_k1b4t")
relative_split_offset = 0.25

[node name="LeftContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/SplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_0ro8k")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/SplitContainer/LeftContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="CategoryContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/SplitContainer/LeftContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="RightContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/SplitContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4oaw7")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/SplitContainer/RightContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/SplitContainer/RightContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SettingOptionContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/SplitContainer/RightContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ShowSettingsFileButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
text = "Show settings file"

[node name="ExportThemeButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
text = "Export theme"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/ExportThemeButton" to="." method="_on_button_2_pressed"]
